# yolo-realsense-python

./: LICENSE  README.md  pyproject.toml  requirements.txt
example/: example_detection.py  example_segmentation.py
scripts/: yolov8_realsense.py
